k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: articdbm
  labels:
    name: articdbm
    version: v2.0
