k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: articdbm
  labels:
    app: postgres
    version: v2.0
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: postgres
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
    protocol: TCP
